# vtables_derive

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
tests/: tests.rs
