[package]
name = "vtables_derive"
version = "0.1.0"
authors = ["jan"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
description = "procedural macros to interact with C++ virtual method tables from Rust"
repository = "https://github.com/not-wlan/vtables_derive"
homepage = "https://github.com/not-wlan/vtables_derive"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]

[dev-dependencies]
static_assertions = "1"
vtables = "0.1"
